# biofusion

./: .env  .env.example  .gitignore  ANTBOT_REFACTORING_PLAN.md  BULLETPROOF_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FIXES_SUMMARY.md  INTEGRATION_STATUS_REPORT.md  PHASE4_PRODUCTION_HARDENING.md  PRODUCTION_READINESS_REPORT.md  README.md  README_HOLARCHY.md  REFACTORING_SUMMARY.md  alembic.ini  docker-compose.yml  log_config.py  pyproject.toml  requirements.txt  run.py  setup.py  setup_ant_bot.py  tatus  test_backup.json  test_encryption.py  test_holarchy_integration.py  test_integration.py  test_simple.py  wallet_backup.json  wallet_cli.py
.github/workflows/: ci.yml  key-rotation-test.yml
ai_models/: ai_model_dashboard.py  ai_model_monitor.py
analysis/: ai_analysis_export_20250625_1942.json  comprehensive_integration.py  comprehensive_logger.py  data_analyzer.py
archive/: digitalocean_setup.sh  solana_memecoin_setup.sh
bindings/: worker_bridge.py
config/: README.md  aggressive_compound.env  env.production  env.template  grafana.ini  logging.yml  logrotate.conf  memecoin_settings.json  ml_requirements.txt  queen.yaml  redis.conf  requirements.txt  settings.yaml  setup.py  simplified.env.template  unified.env.template
config/secrets/: .encryption_key
data/: .encryption_key
data/backups/: wallet_backup_20250418_131345.json  wallet_backup_20250418_131449.json  wallet_backup_20250418_131554.json  wallet_backup_20250418_132221.json  wallet_backup_20250418_145421.json  wallet_backup_20250418_145443.json  wallet_backup_new.json
data/wallets/: 0e3b1684-9ef3-474f-9f77-0b0be4123a40.json  18325abe-05c5-4a0b-8858-33f01b27f1ed.json  33a21d2a-9f45-4b3b-ba44-02f23b2a1afd.json  469702d9-0611-48a5-b252-0098887924bf.json  657a6112-59d0-4be1-b85d-a4f881410382.json  71d24ff1-c9db-4c3e-a7d8-af006d4c480b.json  8100ceab-e5aa-4ed6-8d74-74feaaa71de5.json  8c8529af-af91-4f53-be7a-b01031d3e27e.json  90a0d910-74ab-414e-9d66-fc4e03de8157.json  9c7fa52c-1ac0-43fc-9d1e-2b5e9ab8fdd7.json  a24bd7e8-f04b-44a7-bd27-75995a462392.json  c710cc7a-dd72-4123-a2f1-736562038d9f.json  d7e3ebcb-81ea-4933-82fe-97c81115d04a.json  dbd3316f-f37f-4442-ac4c-64e2a716cd93.json  dff5fb4c-1efe-4886-956f-828e58d4d93f.json  f50545ac-7144-4d0f-9657-08427eaac550.json
deployment/: Dockerfile  backup.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  simplified-deploy.sh  simplified-docker-compose.yml  trading-bot.service
docs/: COMPLETE_SETUP_GUIDE.md  COMPREHENSIVE_LOGGING_SUMMARY.md  DEPLOYMENT_GUIDE.md  MONITORING_SETUP_GUIDE.md  NEURAL_SWARM_SYSTEM.md  README.md  SECURITY.md  WORKING_SOLUTIONS_FOUND.md  key_rotation.md
docs/archive/: ANTBOT_REFACTORING_PLAN.md  README.md
entry_points/: colony_commander.py  run_bot.py
logs/: addresses_only.txt  detailed_token_launches.csv  enhanced_monitor.txt  everything_pump_fun.txt  fixed_monitor.txt  fixed_token_launches.csv  helius_monitor.txt  improved_monitor.txt  improved_token_launches.csv  instant_tokens.txt  live_launches_full.txt  live_token_addresses.txt  live_token_launches.txt  pump_fun_all_activity.txt
monitoring/: ai_live_monitor.py  alert_rules.yml  alertmanager.yml  docker-compose.yml  monitoring_dashboard.py  prometheus.yml  recording_rules.yml  simple_alerts.yml  simplified_monitoring.yml  telegram_bot_monitor.py  web_dashboard.py
python_bot/: README_DASHBOARD.md  capital_manager.py  dashboard.py  deploy.py  drone.py  princess.py  queen.py  requirements.txt  run_dashboard.py  worker.py
rust_core/: .gitignore  .gitkeep  Cargo.toml  build.rs  cbindgen.toml
rust_core/.cargo/: config.toml
rust_core/src/: config.rs  dex_client.rs  dex_provider.rs  jupiter_client.rs  lib.rs  main.rs  orca_client.rs  pathfinder.rs  raydium_client.rs  serum_client.rs  tx_executor.rs  wallet.rs  worker.rs  worker_ant.rs
rust_core/src/dex_provider/: mod.rs
scripts/: alternative_fresh_monitor.py  backup.sh  backup_wallets.py  bitquery_monitor.py  bitquery_realtime_monitor.py  build_core.py  configure_api_keys.py  debug_launches.py  debug_pump_api.py  debug_token_monitor.py  direct_pump_scraper.py  enhanced_geyser_monitor.py  enhanced_launch_monitor.py  enhanced_token_details_monitor.py  everything_monitor.py  examine_raydium_structure.py  fast_solana_scanner.py  fixed_token_monitor.py  format_code.py  get_token_info.py  helius_geyser_monitor.py  helius_working_monitor.py  hybrid_launch_monitor.py  improved_monitor.py  improved_token_monitor.py  ingest_historical_data.py  install_systemd_services.sh  instant_launch_monitor.py  instant_pumpportal_monitor.py  instant_websocket_monitor.py  launch_monitor_integration.py  launch_smart_ape.py  lightning_pump_monitor.py  live_token_monitor.py  manage_db.py  new_token_monitor.py  pump_fun_live_monitor.py  pumpportal_monitor.py  quick_helius_demo.py  quick_helius_test.py  (+26 more)
security/: audit.md
src/: README.md  __init__.py  dex_client.rs  lib.rs  main.py  tx_executor.rs  worker_ant.rs
src/core/: paths.py  (+3 more)
systemd/: README.md  antbot-backup.service  antbot-backup.timer  antbot-dashboard.service  antbot-key-rotation.service  antbot-key-rotation.timer  antbot.service
tests/: bulletproof_testing_suite.py  simplified_bot_tests.py  test_config_loader.py  test_holarchy_integration.py  test_integration.py  test_log_config.py  test_mathematical_improvements.py  test_paths.py  test_phase1.py  test_simple.py  test_wallet_manager.py  test_worker_bridge.py
utils/: monitor.py  wallet_manager.py
worker_ant_v1/: .env  .env.example  README.md  __init__.py  ant_manager.py  anti_hype_filter.py  buyer.py  caller_credibility_tracker.py  check_compounding.py  compounding_engine.py  config.py  dual_confirmation_engine.py  enhanced_trading_engine.py  logger.py  main.py  ml_predictor.py  queen_bot.py  requirements.txt  rug_memory_system.py  run.py  run_enhanced_bot.py  scanner.py  seller.py  sentiment_analyzer.py  split_ant.py  start_simulation.py  start_swarm.py  stealth_mechanics.py  swarm_config.py  swarm_kill_switch.py  system_overview.py  technical_analyzer.py  trader.py  vault_profit_system.py
(+215 files in other folders)
