[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antbot"
version = "1.0.0"
description = "Hyper-intelligent memecoin trading bot with swarm intelligence"
authors = [{name = "Antbot Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "solana>=0.30.0",
    "structlog>=21.0.0",
    "aiosqlite>=0.17.0",
    "cryptography>=3.4.0",
    "prometheus-client>=0.12.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["worker_ant_v1"]
known_third_party = ["aiohttp", "numpy", "pandas", "solana", "structlog", "aiosqlite", "cryptography"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "numpy.*",
    "pandas.*",
    "solana.*",
    "structlog.*",
    "aiosqlite.*",
    "cryptography.*",
]
ignore_missing_imports = true 