[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antbot"
version = "1.0.0"
description = "Hyper-intelligent memecoin trading bot with swarm intelligence"
authors = [{name = "Antbot Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core dependencies
    "aiohttp>=3.9.1",
    "asyncio>=3.4.3",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "requests>=2.31.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    
    # Solana blockchain integration
    "solana>=0.30.2",
    "solders>=0.18.1",
    "base58>=2.1.1",
    "construct>=2.10.68",
    "spl-token>=0.2.0",
    
    # AI and sentiment analysis
    "transformers>=4.35.2",
    "torch>=2.1.1",
    "scikit-learn>=1.3.2",
    "nltk>=3.8.1",
    "textblob>=0.17.1",
    
    # Data analysis and visualization
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "plotly>=5.17.0",
    
    # Message Bus
    "nats-py>=2.7.0",
    "msgpack>=1.0.7",
    
    # Database and storage
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "pymongo>=4.6.0",
    
    # Monitoring and logging
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "colorama>=0.4.6",
    
    # Security and cryptography
    "cryptography>=41.0.7",
    "pycryptodome>=3.19.0",
    
    # API integrations
    "jupiter-python-sdk>=0.2.0",
    "birdeye-python>=0.2.0",
    "dexscreener-python>=0.2.0",
    
    # Configuration and environment
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    
    # Performance and optimization
    "uvloop>=0.19.0",
    "orjson>=3.9.10",
    "ujson>=5.8.0",
    
    # Time and date handling
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    
    # HTTP and networking
    "httpx>=0.25.2",
    "aiofiles>=23.2.1",
    
    # Data validation
    "pydantic>=2.5.0",
    "marshmallow>=3.20.1",
    
    # Async utilities
    "asyncio-throttle>=1.0.2",
    "aiodns>=3.1.1",
    
    # Memory and process management
    "psutil>=5.9.6",
    "memory-profiler>=0.61.0",
    
    # Error handling and debugging
    "sentry-sdk>=1.38.0",
    "better-exceptions>=0.3.3",
    
    # Web3 and blockchain utilities
    "web3>=6.11.3",
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.10.0",
    "flake8>=6.1.0",
    "mypy>=0.950",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

ml = [
    # Core ML Framework
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    
    # Scientific Computing
    "scipy>=1.10.0",
    
    # Machine Learning
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    
    # Deep Learning Extensions
    "datasets>=2.12.0",
    "accelerate>=0.20.0",
    
    # Graph Neural Networks
    "torch-geometric>=2.3.0",
    "networkx>=3.1",
    "dgl>=1.1.0",
    
    # Reinforcement Learning
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.28.0",
    "ray[rllib]>=2.6.0",
    
    # Time Series
    "statsmodels>=0.14.0",
    "arch>=6.2.0",
    "prophet>=1.1.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "optuna>=3.2.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["worker_ant_v1"]
known_third_party = ["aiohttp", "numpy", "pandas", "solana", "structlog", "aiosqlite", "cryptography"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "numpy.*",
    "pandas.*",
    "solana.*",
    "structlog.*",
    "aiosqlite.*",
    "cryptography.*",
]
ignore_missing_imports = true 