[package]
name = "ant_bot_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance trading core for Ant Bot"

[lib]
name = "ant_bot_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ant_bot_cli"
path = "src/main.rs"

[dependencies]
solana-sdk = "1.16"
solana-client = "1.16"
solana-program = "1.16"
anchor-client = "0.28"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
pyo3 = { version = "0.19", features = ["auto-initialize"] }
rayon = "1.7"
crossbeam = "0.8"
dashmap = "5.4"
lazy_static = "1.4"
chrono = "0.4"
tempfile = "3.6" # For tests
libc = "0.2" # For FFI 